tests/baselines/reference/conditionalTypeVarianceBigArrayConstraintsPerformance.errors.txt
tests/cases/compiler/conditionalTypeVarianceBigArrayConstraintsPerformance.ts(9,5): error TS2322: Type 'Stuff<U>' is not assignable to type 'Stuff<T>'.
  Type 'U' is not assignable to type 'T'.
    'T' could be instantiated with an arbitrary type which could be unrelated to 'U'.


==== tests/cases/compiler/conditionalTypeVarianceBigArrayConstraintsPerformance.ts (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    type Stuff<T> =
        T extends keyof JSX.IntrinsicElements
            ? JSX.IntrinsicElements[T]
            : any;
    
    function F<T, U>(p1: Stuff<T>, p2: Stuff<U>) {
        p1 = p2; // Error
        ~~
!!! error TS2322: Type 'Stuff<U>' is not assignable to type 'Stuff<T>'.
!!! error TS2322:   Type 'U' is not assignable to type 'T'.
!!! error TS2322:     'T' could be instantiated with an arbitrary type which could be unrelated to 'U'.
    }